test/attribute/random_expression.rs
use dioxus::prelude::*; 
use dioxus_html_macro::html;

fn main() {
    html!(
        <div 2 * 3>
        </div>
    );
}
